Some not important fixes